main Finish header

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,10 +30,17 @@
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(10px);
   }
+
   100% {
     transform: translateY(0px);
   }
+}
+
+.accessibility-text {
+  position: absolute;
+  left: -999999999px;
 }
